hphp/hack/test/typecheck/xhp_attr_20.php.like_types.exp
File "xhp_attr_20.php", line 8, characters 13-16:
Invalid xhp value for attribute :bar in :foo (Typing[4343])
File "xhp_attr_20.php", line 4, characters 13-15:
Expected ~int because it is an unenforceable type
File "xhp_attr_20.php", line 8, characters 13-16:
But got null
