hphp/hack/test/typecheck/xhp_attr_20.php
<?hh

class :foo extends XHPTest {
  attribute int bar = 123;
}

function testDefaultMakesNotNullable(): void {
  <foo bar={null} />;
}
